@@ -35,7 +35,11 @@ function sqimap_msgs_list_delete($imap_stream, $mailbox, $id) {
     global $move_to_trash, $trash_folder, $uid_support;
     $msgs_id = sqimap_message_list_squisher($id);
     if (($move_to_trash == true) && (sqimap_mailbox_exists($imap_stream, $trash_folder) && ($mailbox != $trash_folder))) {
-        $read = sqimap_run_command ($imap_stream, "COPY $msgs_id \"$trash_folder\"", true, $response, $message, $uid_support);
+        /**
+         * turn off internal error handling (third argument = false) and
+         * ignore copy to trash errors (allows to delete messages when overquota)
+         */
+        $read = sqimap_run_command ($imap_stream, "COPY $msgs_id \"$trash_folder\"", false, $response, $message, $uid_support);
     }
     $read = sqimap_run_command ($imap_stream, "STORE $msgs_id +FLAGS (\\Deleted)", true, $response, $message, $uid_support);
 }
@@ -899,7 +903,11 @@ function sqimap_messages_delete($imap_stream, $start, $end, $mailbox) {
     global $move_to_trash, $trash_folder, $auto_expunge, $uid_support;
 
     if (($move_to_trash == true) && (sqimap_mailbox_exists($imap_stream, $trash_folder) && ($mailbox != $trash_folder))) {
-        sqimap_messages_copy ($imap_stream, $start, $end, $trash_folder);
+        /**
+         * turn off internal error handling (fifth argument = false) and
+         * ignore copy to trash errors (allows to delete messages when overquota)
+         */
+        sqimap_messages_copy ($imap_stream, $start, $end, $trash_folder, false);
     }
     sqimap_messages_flag ($imap_stream, $start, $end, "Deleted", true);
 }
